--- a/main.html
+++ b/main.html
@@ -1,16 +1,72 @@
 <!DOCTYPE html>
-
 <html>
+  <head>
+    <title>Animal Photos</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
+      }
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+      #animal-photos {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+      }
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+      .animal-photo {
+        margin: 20px;
+        text-align: center;
+      }
 
-</body>
+      .animal-photo img {
+        width: 300px;
+        height: 200px;
+        object-fit: cover;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+      }
 
-</html>
+      .animal-photo p {
+        margin-top: 10px;
+        font-weight: bold;
+      }
+
+      #photo-heading {
+        text-align: center;
+        font-size: 36px;
+        margin: 20px;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="animal-photos">
+      <div class="animal-photo">
+        <img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2014_FallP8/Rami_Portfolio_Period8/unit4_css/project_1folder/cssProject1/camel.jpg" alt="Camel">
+        <p>Camel</p>
+      </div>
+      <div class="animal-photo">
+        <img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2014_FallP8/Rami_Portfolio_Period8/unit4_css/project_1folder/cssProject1/cheetah.jpg" alt="Cheetah">
+        <p>Cheetah</p>
+      </div>
+      <div class="animal-photo">
+        <img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2014_FallP8/Rami_Portfolio_Period8/unit4_css/project_1folder/cssProject1/elephant.jpg" alt="Elephant">
+        <p>Elephant</p>
+      </div>
+      <div class="animal-photo">
+        <img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2014_FallP8/Rami_Portfolio_Period8/unit4_css/project_1folder/cssProject1/gorilla.jpg" alt="Gorilla">
+        <p>Gorilla</p>
+      </div>
+      <div class="animal-photo">
+        <img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2014_FallP8/Rami_Portfolio_Period8/unit4_css/project_1folder/cssProject1/koala.jpg" alt="Koala">
+        <p>Koala</p>
+      </div>
+      <div class="animal-photo">
+        <img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2014_FallP8/Rami_Portfolio_Period8/unit4_css/project_1folder/cssProject1/lion.jpg" alt="Lion">
+        <p>Lion</p>
+      </div>
+      <div class="animal-photo">
+        <img src="https://www2.d125.org/applied_arts
